fix whitespace en dessous du footer

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -40,7 +40,7 @@ body {
 .footer { 
     position: absolute; 
     left: 0 ; right: 0; bottom: 0; 
-    height:11%;
+    height:12%;
 }
 
 #rsp {
